# DBKursach

./: CMakeLists.txt  assets.qrc  sqltablemodel.cpp  sqltablemodel.h
qml/: Constants.qml  CrashReporter.qml  DBusAdmin.qml  DTextField.qml  DriversTimetable.qml  LauncherScreen.qml  Main.qml  MyButton.qml  MyLabel.qml  MyTable.qml  Viewer.qml
src/: dbconnector.cpp  dbconnector.h  main.cpp  sqlquerymodel.cpp  sqlquerymodel.h
